--- a/report/TNM085_GROUP1.tex
+++ b/report/TNM085_GROUP1.tex
@@ -350,12 +350,15 @@ Marcus Nygren, marny568}
 	
 	\begin{center}
 		\begin{equation}\label{eq:Poissons ekvation}
-			\nabla ^2 p = \nabla \bold w 
+			\nabla ^2 p = \nabla \cdot \bold w 
 		\end{equation}
 	\end{center}
 	
-	I ekvation $ \ref{eq:Poissons ekvation} $ står $\bold w$ för hastigheten som hittills räknats ut i dem tidigare komponenterna av ekvationen, alltså inte den hastighet som är divergenslös i villkoret $ \ref{eq:villkor} $ 		
-		
+	I ekvation $ \ref{eq:Poissons ekvation} $ står $\bold w$ för hastigheten som hittills räknats ut av dem tidigare komponenterna i ekvationen, alltså inte samma hastighet som är divergenslös i villkoret i ekvation $ \ref{eq:villkor} $. Poissons ekvation kan skrivas om till matrisform, $ \bold Ax = b $, där $\bold A $ 
+
+
+
+
 		\Subsection{Matlab}
 		\emph{Allt vi gjort i Matlab och vad vi kom fram till med hjälp av detta. Varför använde vi Matlab? Fanns det andra metoder att gå tillväga? Hur fick vi över ekvationerna till Matlab?}
 
